# camera-collector

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  Dockerfile  Dockerfile.bcrypt-test  Dockerfile.test  PROGRESS.md  PROGRESS_TEMPLATE.md  README.md  docker-compose-test.yml  docker-compose.yml  overall-description.md  phase1.md  phase3.md  phase4.md  pyproject.toml  pytest.ini  vintage_camera_api_design.md
camera_collector/: main.py
camera_collector/api/: dependencies.py
camera_collector/core/: config.py  exceptions.py  security.py
camera_collector/db/: database.py
camera_collector/models/: camera.py  token.py  user.py
camera_collector/schemas/: auth.py  camera.py  user.py
camera_collector/services/: auth_service.py  camera_service.py
docs/: phase2.md  phase4.5.md  prompt-for-docs.txt  vintage_camera_api_implementation_plan.md
docs/agents/: AGENT_PROMPT.md  API.md  ARCHITECTURE.md  ENVIRONMENTS.md  TESTING.md
scripts/: mongo-init-test.js  run_tests.sh  seed_data.py  setup_db.py
tests/: conftest.py  test_bcrypt_standalone.py
tests/api/: test_auth.py  test_cameras.py  test_stats.py
tests/integration/: test_api_integration.py  test_db_connection.py  test_mongodb_integration.py
tests/models/: test_camera.py  test_token.py
tests/repositories/: camera_repository_mock.py  test_camera_repository.py  user_repository_mock.py
tests/services/: test_auth_service.py  test_camera_service.py
tests/unit/: test_bcrypt_auth.py  test_bcrypt_direct.py  test_config.py  test_dependencies.py  test_exceptions.py  test_schema_validation.py  (+1 more)
(+6 files in other folders)
